ws demo